Edited some layout issues. More navigational components done. Menu page added.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,8 +31,22 @@
   gap: 15px;
   box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
   backdrop-filter: blur(8px);
-  text-align: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
 }
 
+.menulaatikko {
+  background: rgba(255, 255, 255, 0.45);
+  padding: 32px 48px;
+  border-radius: 24px;
+  gap: 15px;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
+  backdrop-filter: blur(8px);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  
+}
